# weathermart

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  avail.csv  coords.csv  core  eumetsat_aws.py  install.sh  mars_all.py  pyproject.toml  readme.rst  requirements-docs.txt  run_month.sh  run_month_eumetsat_aws.sh  submit_all.sh  submit_all_eumetsat_aws.sh
docs/: examples.rst  installation.rst
docs/_static/: custom.css
docs/examples/: eumetsat.rst  lightning.rst  mars_odb.rst  nwp.rst  radar.rst  satellite.rst  station.rst
docs/modules/: retriever.rst
examples/: example_dem.py  example_eumetsat_aws_atms.py  example_eumetsat_iasi_channels.py  example_frost.py  example_lightning.py  example_mars_anemoi.py  example_mars_odb.py  example_metop.py  example_metop_ascat.py  example_metop_avhrr.py  example_metop_iasi.py  example_msg.py  example_mtg.py  example_netatmo.py  example_nordic_radar.py  example_opera.py  example_plot_radiance_instruments.py
scripts/: cancel_ecmwf_mars_requests.py  setup_mars.sh
src/weathermart/: base.py  default_provider.py  provide.py  retrieve.py  utils.py  variable_metadata.csv  variable_naming.py
src/weathermart/examples/: example_eumetsat_iasi_channels.py  example_mars_anemoi.py  example_mars_anemoi_interp.py  example_metop.py  example_metop_ascat.py  example_metop_avhrr.py  example_metop_iasi.py  example_msg.py  example_mtg.py  example_nordic_radar.py  example_opera.py  example_plot_radiance_instruments.py
src/weathermart/retrievers/: __init__.py  dem.py  dwh.py  eumetsat.py  fdb.py  frost.py  grib.py  mars.py  netatmo.py  radar.py  satellite.py  titan.py
tests/: config_end2end.yaml  test_end2end.py  test_eumetsat_retriever.py  test_frost_lightning.py  test_mars_retriever.py  test_retrievers.py
